unpackaged/main/default/objects/csmrgp__CaseMergeSettings__c/fields/csmrgp__CopyFields10__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__CopyFields10__c</fullName>
    <label>CopyFields10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>