unpackaged/main/default/objects/csmrgp__CaseMergeSettings__c/fields/csmrgp__CopyFields11__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__CopyFields11__c</fullName>
    <label>CopyFields11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>