unpackaged/main/default/objects/csmrgp__CaseMergeSettings__c/fields/csmrgp__CopyFields12__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__CopyFields12__c</fullName>
    <label>CopyFields12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>