unpackaged/main/default/objects/csmrgp__CaseMergeSettings__c/fields/csmrgp__IgnoreInsErrs__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__IgnoreInsErrs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IgnoreInsErrs</label>
    <type>Checkbox</type>
</CustomField>