unpackaged/main/default/objects/csmrgp__CaseMergeSettings__c/fields/csmrgp__ParentField__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__ParentField__c</fullName>
    <label>ParentField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>